--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/alpinejs": "^3.13.6",
+    "alpinejs": "^3.13.4",
     "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "htmx.org": "^1.9.10",
     "js-cookie": "^3.0.5",
     "postcss-import": "^16.0.0",
     "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11"
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "slim-select": "^2.8.1"
   }
 }
