--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/js-cookie": "^3.0.6"
+    "@types/js-cookie": "^3.0.6",
+    "@types/preact-custom-element": "^4.0.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -31,6 +32,8 @@
     "htmx.org": "^1.9.10",
     "js-cookie": "^3.0.5",
     "postcss-import": "^16.0.0",
+    "preact": "^10.19.3",
+    "preact-custom-element": "^4.3.0",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "slim-select": "^2.8.1"
