--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@preact/signals": "^1.2.2",
+    "@lit-labs/preact-signals": "^1.0.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
@@ -32,6 +32,7 @@
     "concurrently": "^8.2.2",
     "htmx.org": "^1.9.10",
     "js-cookie": "^3.0.5",
+    "lit": "^3.1.2",
     "postcss-import": "^16.0.0",
     "preact": "^10.19.3",
     "preact-custom-element": "^4.3.0",
