--- a/.air.toml
+++ b/.air.toml
@@ -14,14 +14,14 @@ exclude_unchanged = false
 follow_symlink = false
 full_bin = ""
 include_dir = []
-include_ext = ["go", "tpl", "tmpl", "html", "mustache", "css", "ts", "tsx"]
+include_ext = ["go"]
 include_file = []
 kill_delay = "0s"
 log = "build-errors.log"
 poll = false
 poll_interval = 0
 post_cmd = []
-pre_cmd = ['bun run build']
+pre_cmd = ['bun run dev']
 rerun = true
 rerun_delay = 500
 send_interrupt = false
