--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.8.0",
     "react-to-webcomponent": "^2.0.0",
     "slim-select": "^2.8.1"
   }
