--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "scripts": {
     "dev:css": "tailwindcss -i ./styles/_styles.css -o ./public/dist/stylesheet.css -c ./tailwind.config.ts --watch",
-    "dev:scripts": "bun build --minify ./client-js/index.ts --outdir ./public/dist --watch",
+    "dev:scripts": "bun esbuild ./client-js/index.ts --bundle --minify --watch --sourcemap --outfile=./public/dist/index.js",
     "dev": "concurrently 'bun:dev:*'",
     "build:scripts": "bun build --minify ./client-js/index.ts --outdir ./public/dist",
-    "build:scripts:prod": "bun build --minify ./client-js/index.ts --outdir ./public/dist",
+    "build:scripts:prod": "bun esbuild ./client-js/index.ts --bundle --minify --outfile=./public/dist/index.js",
     "build:css:prod": "bun tailwindcss -i ./styles/_styles.css -o ./public/dist/stylesheet.css -m",
     "build": "bun run build:scripts:prod && bun run build:css:prod",
     "lint": "bun prettier . --check",
@@ -16,7 +16,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/js-cookie": "^3.0.6",
-    "@types/preact-custom-element": "^4.0.4"
+    "@types/preact-custom-element": "^4.0.4",
+    "esbuild": "^0.20.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
