--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/js-cookie": "^3.0.6",
-    "@types/preact-custom-element": "^4.0.4",
-    "esbuild": "^0.20.1"
+    "@types/preact-custom-element": "^4.0.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -36,6 +35,7 @@
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
     "concurrently": "^8.2.2",
+    "esbuild": "^0.20.1",
     "htmx.org": "^1.9.10",
     "js-cookie": "^3.0.5",
     "lit": "^3.1.2",
